--- a/src/pages/Home/styles/main.css
+++ b/src/pages/Home/styles/main.css
@@ -5,7 +5,6 @@
 		center fixed;
 	background-size: cover;
 	position: relative;
-	min-height: 100vh;
 
 	/* Defaults for glow */
 	--glow-x: 10%;
