--- a/src/styles/components/Navbar/navbar.css
+++ b/src/styles/components/Navbar/navbar.css
@@ -5,6 +5,7 @@
 		@apply fixed top-0 left-0 w-full z-50;
 		@apply bg-[rgb(var(--c-surface))];
 		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.035);
+		height: var(--h-navbar);
 	}
 
 	.ui-navbar-inner {
